Fix body width regression on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,8 @@ h1, h2, h3, h4 {
 
 body {
     margin: 0 auto;
-    width: 60ch;
+    width: 100%;
+    min-width: 60ch;
     padding: 1.25rem;
     padding-bottom: 2.5rem;
 }
